--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
-Package: Ropls.with.permutated.variable.selection
+Package: roplspvs
 Type: Package
-Title: Opls modeling of group comparisons with variable selection
+Title: Opls modeling of group comparisons including permutations over variable selection
 Version: 0.1.0
 Author: Marika Strom
 Maintainer: The package maintainer <marika.strom@ki.se>
-Description: Performs opls models comparing all groups to eachother, performs variable selection using 4 strategies and produces scores, loading plots, rock curves and signifcant test using permutations pre variable selection.
+Description: Performs opls models comparing all groups to eachother, performs variable selection using 5 strategies and produces scores, loading plots, rock curves and signifcant test using permutations pre,post and over variable selection.
 License: CCO
 Encoding: UTF-8
 LazyData: false
